--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,8 @@
 # IntelliJ Platform Artifacts Repositories
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.serjsysoev.87dphdrnijp9dbrj
-pluginName = 87dPhDrnijP9DbRj
+pluginGroup = com.github.serjsysoev.simple_inspection
+pluginName = simple_inspection
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
 
